fix: added gap between the input and button in mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -413,6 +413,10 @@ footer a:hover {
         top: 35%;
     }
 
+    #main > form {
+        gap: 10px;
+    }
+
     #main > form, #main  #result-form {
         width: 90%;
         height: 3rem;
